--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,11 +46,5 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: PlatformIO build
+      run: pio run -v
