--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,5 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: PlatformIO build
-      run: pio run -v --environment=lpc1769
+    - name: PlatformIO build for LPC1769
+      run: pio run -v --environment=LPC1769
