--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,33 +42,129 @@ jobs:
           
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    
+    # SKR13_TMC2208_BTT_TFT
+    - name: Copy Configs
+      run: |
+        rm ./Marlin/Configuration.h
+        \cp ./buildconfigs/SKR13_TMC2208_BTT_TFT/Configuration.h ./Marlin/Configuration.h
+        
+    - name: PlatformIO build of SKR13_TMC2208_BTT_TFT
+      run: pio run --environment=LPC1768
       
-    # SKR14
+    - uses: actions/upload-artifact@v2
+      name: SKR13_TMC2208_BTT_TFT Artifact
+      with:
+        name: SKR13_TMC2208_BTT_TFT_firmware
+        path: ${{ github.workspace }}/.pio/build/LPC1768/firmware.bin
+        
+    - name: Cleanup bin
+      run: rm ${{ github.workspace }}/.pio/build/LPC1768/firmware.bin
+    
+    # SKR13_TMC2209_BTT_TFT
+    - name: Copy Configs
+      run: |
+        rm ./Marlin/Configuration.h
+        \cp ./buildconfigs/SKR13_TMC2209_BTT_TFT/Configuration.h ./Marlin/Configuration.h
+        
+    - name: PlatformIO build of SKR13_TMC2209_BTT_TFT
+      run: pio run --environment=LPC1768
+      
+    - uses: actions/upload-artifact@v2
+      name: SKR13_TMC2209_BTT_TFT Artifact
+      with:
+        name: SKR13_TMC2209_BTT_TFT
+        path: ${{ github.workspace }}/.pio/build/LPC1768/firmware.bin
+        
+    - name: Cleanup bin
+      run: rm ${{ github.workspace }}/.pio/build/LPC1768/firmware.bin
+  
+    # SKR14_TMC2208_BTT_TFT
+    - name: Copy Configs
+      run: |
+        rm ./Marlin/Configuration.h
+        \cp ./buildconfigs/SKR14_TMC2208_BTT_TFT/Configuration.h ./Marlin/Configuration.h
+        
+    - name: PlatformIO build of SKR14_TMC2208_BTT_TFT
+      run: pio run --environment=LPC1768
+      
+    - uses: actions/upload-artifact@v2
+      name: SKR14_TMC2208_BTT_TFT Artifact
+      with:
+        name: SKR14_TMC2208_BTT_TFT
+        path: ${{ github.workspace }}/.pio/build/LPC1768/firmware.bin
+        
+    - name: Cleanup bin
+      run: rm ${{ github.workspace }}/.pio/build/LPC1768/firmware.bin
+    
+    # SKR14_TMC2209_BTT_TFT
     - name: Copy Configs
       run: |
         rm ./Marlin/Configuration.h
         \cp ./buildconfigs/SKR14_TMC2209_BTT_TFT/Configuration.h ./Marlin/Configuration.h
         
-    - name: PlatformIO build for LPC1768
+    - name: PlatformIO build of SKR14_TMC2209_BTT_TFT
       run: pio run --environment=LPC1768
       
     - uses: actions/upload-artifact@v2
-      name: SKR14 Artifact
+      name: SKR14_TMC2209_BTT_TFT Artifact
       with:
-        name: skr14_firmware
+        name: SKR14_TMC2209_BTT_TFT
         path: ${{ github.workspace }}/.pio/build/LPC1768/firmware.bin
-
-    # SKR14 Turbo
+        
+    - name: Cleanup bin
+      run: rm ${{ github.workspace }}/.pio/build/LPC1768/firmware.bin
+    
+    # SKR14TURBO_TMC2208_BTT_TFT
     - name: Copy Configs
       run: |
         rm ./Marlin/Configuration.h
-        \cp ./buildconfigs/SKR14TURBO_TMC2209_BTT_TFT/Configuration.h ./Marlin/Configuration.h
+        \cp ./buildconfigs/SKR14TURBO_TMC2208_BTT_TFT/Configuration.h ./Marlin/Configuration.h
         
-    - name: PlatformIO build for LPC1769
+    - name: PlatformIO build of SKR14TURBO_TMC2208_BTT_TFT
       run: pio run --environment=LPC1769
       
     - uses: actions/upload-artifact@v2
-      name: SKR14 Turbo Artifact
+      name: SKR14TURBO_TMC2208_BTT_TFT Artifact
       with:
-        name: skr14turbo_firmware
+        name: SKR14TURBO_TMC2208_BTT_TFT
         path: ${{ github.workspace }}/.pio/build/LPC1769/firmware.bin
+        
+    - name: Cleanup bin
+      run: rm ${{ github.workspace }}/.pio/build/LPC1769/firmware.bin
+    
+    # SKR14TURBO_TMC2209_BTT_TFT
+    - name: Copy Configs
+      run: |
+        rm ./Marlin/Configuration.h
+        \cp ./buildconfigs/SKR14TURBO_TMC2208_BTT_TFT/Configuration.h ./Marlin/Configuration.h
+        
+    - name: PlatformIO build of SKR14TURBO_TMC2209_BTT_TFT
+      run: pio run --environment=LPC1769
+      
+    - uses: actions/upload-artifact@v2
+      name: SKR14TURBO_TMC2208_BTT_TFT Artifact
+      with:
+        name: SKR14TURBO_TMC2208_BTT_TFT
+        path: ${{ github.workspace }}/.pio/build/LPC1769/firmware.bin
+        
+    - name: Cleanup bin
+      run: rm ${{ github.workspace }}/.pio/build/LPC1769/firmware.bin
+      
+    # TRIGORILLA_PRO
+    - name: Copy Configs
+      run: |
+        rm ./Marlin/Configuration.h
+        \cp ./buildconfigs/TRIGORILLA_PRO/Configuration.h ./Marlin/Configuration.h
+        
+    - name: PlatformIO build of TRIGORILLA_PRO
+      run: pio run --environment=trigorilla_pro
+      
+    - uses: actions/upload-artifact@v2
+      name: TRIGORILLA_PRO Artifact
+      with:
+        name: TRIGORILLA_PRO
+        path: ${{ github.workspace }}/.pio/build/trigorilla_pro/firmware.bin
+        
+    - name: Cleanup bin
+      run: rm ${{ github.workspace }}/.pio/build/trigorilla_pro/firmware.bin
