--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Marlin Build
+name: Predator Marlin Build
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the 2.0.x branch
